--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.1.3",
     "ejs-locals": "^1.0.2",
     "express": "^4.18.1",
-    "material-icons": "^1.11.2"
+    "material-icons": "^1.11.2",
+    "mongoose": "^6.4.0"
   }
 }
