--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs-locals": "^1.0.2",
     "express": "^4.18.1",
     "material-icons": "^1.11.2",
+    "method-override": "^3.0.0",
     "mongoose": "^6.4.0",
     "mongoose-slug-generator": "^1.0.4"
   }
