--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "material-icons": "^1.11.2",
     "method-override": "^3.0.0",
     "mongoose": "^6.4.0",
-    "mongoose-slug-generator": "^1.0.4"
+    "mongoose-slug-generator": "^1.0.4",
+    "tinymce": "^6.1.0"
   }
 }
