--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "connect-mongo": "^4.6.0",
     "ejs-locals": "^1.0.2",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "material-icons": "^1.11.2",
     "method-override": "^3.0.0",
     "mongoose": "^6.4.0",
     "mongoose-slug-generator": "^1.0.4",
+    "passport": "^0.6.0",
     "tinymce": "^6.1.0"
   }
 }
