--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^6.4.0",
     "mongoose-slug-generator": "^1.0.4",
     "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "tinymce": "^6.1.0"
   }
 }
